--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="background-color: white;"></div>
   <!-- JavaScript Bundle with Popper -->
   <!-- <script>
       document.addEventListener('scroll', function(e) {
